change java version to 11